# CQUPT-Rollcall-Project

./: .dockerignore  .gitignore  Dockerfile.edge  README.md  center_main.py  docker-compose.yml  edge_main.py  pyproject.toml  requirements.txt
center_server/: center_server.py
docs/: api_docs.md  edge_deployment.md
edge_server/: center_ws.py  config.py  crypto.py  edge_server.py  lms_client.py  routers.py  tasks.py  utils.py
ios/: CQUPT_RollcallApp.swift  ContentView.swift  QRScannerView.swift  RollcallViewModel.swift
web/: checkin.php  jssdk_signature.php  qrscan.php
