[project]
name = "cqupt-rollcall-server"
version = "0.1.0"
description = "Rollcall Server for CQUPT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
